umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@openbabel_canon_cistrans8.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  summary:
    sum_formula: C18
    atom_count: 18
    bond_count: 19
    property_count: 0
molecule_lenient:
  success: true
  summary:
    sum_formula: C18
    atom_count: 18
    bond_count: 19
    property_count: 0
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C18
    atom_count: 18
    bond_count: 19
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C18
    atom_count: 18
    bond_count: 19
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
